fix: backface-visibility

--- a/rotating_card/style.css
+++ b/rotating_card/style.css
@@ -55,8 +55,8 @@ h1 span {
     width: 100%;
     padding: 30px;
     border-radius: 8px;
-    /* backface-visibility: hidden;
-    -webkit-backface-visibility: hidden; */
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 .card-front {
     background-color: #ed5d34;
